--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,5 +8,13 @@
     <body>
         <h1>ITEMS LIST</h1>
         <p>SHOP WITH JULI J</p>
+        <p>The best onnline store</p>
+        <p>Affordable and cheap</p>
+        <p>Always there for you</p>
+        <p>Happy shoping time</p>
+        <h2>Gorcery list</h2>
+        <h3>provision list</h3>
+        <a href="https://unsplash.com/photos/an-aerial-view-of-a-road-next-to-a-body-of-water-rPzGrpFFmPI"><img src="sea.jpg" alt="sea meets desert"></a>
+        
     </body>
 </html>
