--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -15,6 +15,7 @@
         <h2>Gorcery list</h2>
         <h3>provision list</h3>
         <a href="https://unsplash.com/photos/an-aerial-view-of-a-road-next-to-a-body-of-water-rPzGrpFFmPI"><img src="sea.jpg" alt="sea meets desert"></a>
+        <p>Go to <a href="tweets.html">tweet</a></p>
         
     </body>
 </html>
