--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,6 +6,14 @@
         <title>JULI J cares</title>
     </head>
     <body>
+        <header>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tweets.html">Tweets</a></li>
+            </ul>
+        </header>
+        <main>
+            <article>
         <h1>ITEMS LIST</h1>
         <p>SHOP WITH JULI J</p>
         <p>The best onnline store</p>
@@ -16,6 +24,14 @@
         <h3>provision list</h3>
         <a href="https://unsplash.com/photos/an-aerial-view-of-a-road-next-to-a-body-of-water-rPzGrpFFmPI"><img src="sea.jpg" alt="sea meets desert"></a>
         <p>Go to <a href="tweets.html">tweet</a></p>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+        </main>
+        <footer>
+            <p>Made by olomo korede michael -<a href="https://unsplash.com/photos/an-aerial-view-of-a-road-next-to-a-body-of-water-rPzGrpFFmPI" target="_blank">visit unsplash</a></p>
         
     </body>
 </html>
+
