--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -30,8 +30,8 @@
         </aside>
         </main>
         <footer>
-            <p>Made by olomo korede michael -<a href="https://unsplash.com/photos/an-aerial-view-of-a-road-next-to-a-body-of-water-rPzGrpFFmPI" target="_blank">visit unsplash</a></p>
-        
+            <p>Made by olomo korede michael</p> - <a href="https://unsplash.com/photos/an-aerial-view-of-a-road-next-to-a-body-of-water-rPzGrpFFmPI" target="_blank">visit unsplash</a>
+        </footer>
     </body>
 </html>
 
