--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,9 +6,26 @@
         <title>JULI J cares</title>
     </head>
     <body>
-        <h1>ITEMS LIST</h1>
-        <p>SHOP WITH JULI J</p>
-        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">please &amp; abeg. 😔❤️ <a href="https://t.co/Y46ZGOxog8">pic.twitter.com/Y46ZGOxog8</a></p>&mdash; THE KINE 🌕🖤 (@asher_kine) <a href="https://twitter.com/asher_kine/status/1834172145435300323?ref_src=twsrc%5Etfw">September 12, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <p>Go to <a href="index.html">homepage</a></p>
+        <header>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tweets.html">Tweets</a></li>
+            </ul>
+        </header>
+        <main>
+            <article>
+                <h1>ITEMS LIST</h1>
+            <p>SHOP WITH JULI J</p>
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">please &amp; abeg. 😔❤️ <a href="https://t.co/Y46ZGOxog8">pic.twitter.com/Y46ZGOxog8</a></p>&mdash; THE KINE 🌕🖤 (@asher_kine) <a href="https://twitter.com/asher_kine/status/1834172145435300323?ref_src=twsrc%5Etfw">September 12, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <p>Go to <a href="index.html">homepage</a></p>
+            </article>
+            <aside>
+                <p>placeholder to add comment thread later</p>
+            </aside>
+        </main>
+        <footer>
+            <p>Made by olomo korede michael</p> - <a href="https://unsplash.com/photos/an-aerial-view-of-a-road-next-to-a-body-of-water-rPzGrpFFmPI" target="_blank">visit unsplash</a>
+        </footer>
+       
     </body>
 </html>
