--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -52,11 +52,12 @@
         <p>If you’d like to get in touch, feel free to email me at <a href="mailto:michealolomo@gmail.com">michealolomo@gmail.com</a>.</p>
         <p>Connect with me on <a href="www.linkedin.com/in/olomo-michael" target="_blank">LinkedIn</a> and check out my work on <a href="https://github.com/johndoe" target="_blank">GitHub</a>.</p>
     </section>
-    <p>
+    
     <footer>
-         2024 Olomo michael
+        <p>
+         &copy; 2024 Olomo michael
+        </p>
     </footer>
-    </p>
 </body>
 
 </html>
