added a new directory called css_basic

--- a/html_basic/portfolio/index.html
+++ b/html_basic/portfolio/index.html
@@ -52,9 +52,10 @@
         <p>If you’d like to get in touch, feel free to email me at <a href="mailto:michealolomo@gmail.com">michealolomo@gmail.com</a>.</p>
         <p>Connect with me on <a href="www.linkedin.com/in/olomo-michael" target="_blank">LinkedIn</a> and check out my work on <a href="https://github.com/johndoe" target="_blank">GitHub</a>.</p>
     </section>
-
     <footer>
-        <p>&copy; 2024 Olomo michael</p>
+        <p>
+         &copy; 2024 Olomo michael
+        </p>
     </footer>
 </body>
 
