added css external file to index.html and tweets.html

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        h1 {
+            color: deepskyblue;
+            text-align: center;
+          }
         <title>JULI J cares</title>
     </head>
     <body>
