--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -3,9 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          {
-            color: deepskyblue;
-            text-align: center;
+        {
+            background-color: #f0f0f0; deepskyblue;
           }
         <title>JULI J cares</title>
     </head>
