--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -3,9 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        {
-            background-color: #f0f0f0; deepskyblue;
-          }
+        <link href="base.css" rel="stylesheet">
+<link href="styles.css" rel="stylesheet">
         <title>JULI J cares</title>
     </head>
     <body>
