--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="base.css" rel="stylesheet">
 <link href="styles.css" rel="stylesheet">
+<link href="base.css" rel="stylesheet">
         <title>JULI J cares</title>
     </head>
     <body>
@@ -26,7 +27,7 @@
         <h3>provision list</h3>
         <a href="https://unsplash.com/photos/an-aerial-view-of-a-road-next-to-a-body-of-water-rPzGrpFFmPI"><img src="sea.jpg" alt="sea meets desert"></a>
         <p>Go to <a href="tweets.html">tweet</a></p>
-        <table style=" width 100%">
+        <table style=" width: 100%">
             <thead>
             <tr>
                 <th>Name</th>
