--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -8,7 +8,7 @@
 <link href="base.css" rel="stylesheet">
         <title>JULI J cares</title>
     </head>
-    <body>
+    <body class="works_on_smartphone">
         <header>
             <ul>
                 <li><a href="index.html">Home</a></li>
